--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,125 @@
- <style>
-      
-      body {
-        background-color: lavender;
-      }
-        hr {
-             
-              border-style: none;
-              border-top-style: dotted;
-              border-color: purple;
-              border-width: 5px;
-              width: 5%;
-        }
-    h1{
-              color: #66BFBF  
-    }
-     h2{
-             color: #66BFBF  
-    }
-     h3{
-             color: #66BFBF  
-        }
+body{
+    margin: 0;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color:#40514E;
+}
+h1{
+    font-size: 5.625rem;
+    color:#66BFBF;
+    margin-top:50px auto 0 auto 0;
+    font-family:'Lucida Handwriting';
+   
+}
+h2 {
+    color: #66BFBF;
+    font-size: 2.5rem;
+    font-family: 'Lucida Sans';
+    font-weight: normal;
+    padding-bottom: 10px;
+}
+h3{
+    color:#11999E;
+    font-family:'Lucida Sans';
+}
+p{
+    line-height: 2;
+}
+hr{
+    border: dotted #EAF6F6 6px;
+    border-bottom: none;
+    width: 4%;
+    margin: 100px auto;
+}
+a{
+    color: #11999E;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 10px 20px;
+    text-decoration: none;
+}
+a:hover{
+    color:#EAF6F6;
+}
+.top-container {
+    background-color: #E4F9F5;
+    position: relative;
+    padding-top: 100px;
+}     
+.middle.top-container{
+    margin: 100px;
+}
 
-   </style>
+.bottom-container{
+    background-color: #66BFBF;
+    padding: 40px 0 20px;
+}
+
+.bottom-cloud{
+    position: absolute;
+    left:250px;
+    bottom: 300px;
+    }
+.contact-me {
+    width: 40%;
+    margin: 40px auto 60px;
+}
+
+.copyright {
+    color: #EAF6F6;
+    font-size: 0.75rem;
+    padding: 20px 0;
+}
+.top-cloud{
+    position:absolute;
+    right: 300px;
+    top: 40px;
+}
+.skill-row{
+    text-align: left;
+    width: 50%;
+    margin: 100px auto 100px auto;
+}
+.intro {
+    width: 30%;
+    margin: auto;
+}
+.laptop{
+    width:25%;
+    float:left;
+    margin-right: 30px;
+}
+.monitor {
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
+
+.tools{
+    width: 25%;
+    float: right;
+    margin-right: 30px;
+}
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
