--- a/css/styles.css
+++ b/css/styles.css
@@ -124,3 +124,4 @@ a:hover{
         background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
         background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
         text-decoration: none;
+}
